--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.7"
+tokio = { version = "1", features = ["full"] }
+rand = "0.9.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tracing-subscriber = "0.3.20"
+redis = { version = "0.32.7", features = ["tokio-comp"] }
+uuid = { version = "1.8", features = ["v4", "serde"] } 
+
