--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ serde_json = "1.0"
 
 # Utils
 rand = "0.9.2"
-tracing-subscriber = "0.3.20"
+tracing = "0.1.37"
+tracing-subscriber = {version ="0.3.20" , features = ["env-filter"]}
 uuid = { version = "1.8", features = ["v4", "serde"] } 
+config = "0.15.19"
 
 # Database
 redis = { version = "0.32.7", features = ["tokio-comp"] }
