--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tracing = "0.1.37"
 tracing-subscriber = {version ="0.3.20" , features = ["env-filter"]}
 uuid = { version = "1.8", features = ["v4", "serde"] } 
 config = "0.15.19"
+serial_test = "3.2.0"
 
 # Database
 redis = { version = "0.32.7", features = ["tokio-comp"] }
