--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 # Web
 axum = { version = "0.8.7", features = ["ws"] }
 tokio = { version = "1", features = ["full"] }
-tower-http = { version = "0.6", features = ["trace"] }
+tower-http = { version = "0.6", features = ["trace", "cors"] }
+tokio-tungstenite = "0.28.0"
 thiserror = "2.0.17"
+futures = "0.3.31"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -17,8 +19,8 @@ serde_json = "1.0"
 # Utils
 rand = "0.9.2"
 tracing = "0.1.37"
-tracing-subscriber = {version ="0.3.20" , features = ["env-filter"]}
-uuid = { version = "1.8", features = ["v4", "serde"] } 
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+uuid = { version = "1.8", features = ["v4", "serde"] }
 config = "0.15.19"
 async-trait = "0.1.89"
 
