--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 axum = { version = "0.8.7", features = ["ws"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.6", features = ["trace", "cors"] }
-tokio-tungstenite = "0.28.0"
+tokio-tungstenite = { version = "*" }
 thiserror = "2.0.17"
 futures = "0.3.31"
+reqwest = { version = "0.12.24", features = ["json"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
